--- a/src/pages/Dashboard/Students/student.module.css
+++ b/src/pages/Dashboard/Students/student.module.css
@@ -2,6 +2,10 @@
   width: 372px;
   height: 360px;
   border-radius: 6px;
+  display: flex;
+  justify-content: center !important;
+  align-items: center !important;
+
   background: var(--White, #fff);
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.08);
 }
@@ -9,4 +13,8 @@
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.08);
   background-color: white;
   padding: 20px 20px;
+}
+.studentImageSection {
+  width: 400px;
+  height: 400px;
 }
