--- a/src/pages/ForgetPassword/Otp/otp.module.css
+++ b/src/pages/ForgetPassword/Otp/otp.module.css
@@ -1,15 +1,22 @@
 .formContainer {
-    width:495px;
-    margin: 0 auto;
-  }
-  .input {
-    height: 45px;
-    margin-top: 6px;
-
-  }
-  .otpInput {
-    width: 50px;
-    height: 70px;
-    font-size: 20px;
-
-  }
+  width: 495px;
+  margin: 0 auto;
+}
+.input {
+  height: 45px;
+  margin-top: 6px;
+}
+.otpInput {
+  text-align: center;
+  width: 70px;
+  height: 70px;
+  font-size: 20px;
+}
+.otpButton {
+  height: 45px;
+  font-weight: 400;
+  font-size: 18px;
+  background: #2492eb;
+  align-self: flex-end; /* Assuming you meant to align it to the bottom */
+  margin-top: 20px;
+}
