--- a/src/pages/Dashboard/StudentDashboard/studentDashboard.module.css
+++ b/src/pages/Dashboard/StudentDashboard/studentDashboard.module.css
@@ -19,3 +19,19 @@
   border-radius: 8px;
   box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.06);
 }
+.nextBtn {
+  padding: 16px 10px;
+  width: 433px;
+  border-radius: 3px;
+  background-color: #2492eb;
+  color: white;
+  cursor: pointer !important;
+}
+.prevBtn {
+  padding: 16px 10px;
+  width: 433px;
+  border-radius: 3px;
+  border: 1px solid #858585;
+  color: #858585;
+  cursor: pointer;
+}
