refactor(events): refactor events cards

--- a/src/pages/Dashboard/Courses/courses.module.css
+++ b/src/pages/Dashboard/Courses/courses.module.css
@@ -12,7 +12,7 @@
 }
 .addCourse {
   background-color: #2492eb;
-  padding: 16px;
+  padding: 14px 20px;
   border-radius: 8px;
   color: white;
   font-weight: 500;
