--- a/src/component/EventsCard/eventsCard.module.css
+++ b/src/component/EventsCard/eventsCard.module.css
@@ -30,3 +30,9 @@
   color: #1481da;
   font-weight: 500;
 }
+
+.eventCard {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.08);
+  border-radius: 8px;
+}
