--- a/src/pages/Dashboard/Attendence/attendence.module.css
+++ b/src/pages/Dashboard/Attendence/attendence.module.css
@@ -1,19 +1,24 @@
 .inactive {
   /* width: 119px !important;
   height: 50px !important; */
-  padding: 8px;
-  background: var(--Primary-Color-Blue-10, #e1ecf4) !important;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 3px;
+  padding: 8px 12px;
+  background: #e1ecf4 !important;
 
   color: #2492eb;
-  border: 1px solid #2492eb;
 }
 .active {
-  padding: 8px;
+  padding: 8px 12px;
+  font-size: 18px;
+  border-radius: 3px;
+  font-weight: 500;
   background-color: #2492eb;
   color: white !important;
 }
 .present {
-  background: var(--Green-Green-10, #eaf6ee);
+  background: #eaf6ee;
   color: #2ba24c;
   padding: 2px 10px;
   border: none;
