--- a/src/pages/Dashboard/Courses/courses.module.css
+++ b/src/pages/Dashboard/Courses/courses.module.css
@@ -44,3 +44,9 @@
   box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.06);
   border-radius: 8px;
 }
+.buttonContainer {
+  position: absolute;
+  bottom: 0;
+  width: 100%; /* Ensure full width */
+  top: calc(80vh - 40px); /* Adjust based on content height and button height */
+}
