--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 body {
   font-family: "Poppins", sans-serif;
 }
