--- a/src/pages/Dashboard/Profile/Profile.module.css
+++ b/src/pages/Dashboard/Profile/Profile.module.css
@@ -4,6 +4,7 @@
   border-right: none !important;
   border-bottom: "1px solid #ddd";
   border-radius: 0 !important;
+  background-color: white !important;
 }
 .input:hover {
   border-top: none !important;
@@ -11,7 +12,9 @@
   border-right: none !important;
   border-bottom: "1px solid #ddd";
   border-radius: 0 !important;
+  box-shadow: none !important;
 }
+
 .studentImageSection {
   width: 372px;
   height: 360px;
