--- a/src/pages/Dashboard/Department/department.module.css
+++ b/src/pages/Dashboard/Department/department.module.css
@@ -4,3 +4,11 @@
   border-radius: 8px;
   box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.06);
 }
+.addDepartmentBtn {
+  background-color: #2492eb;
+  padding: 14px 20px;
+  border-radius: 8px;
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+}
